--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,12 +18,23 @@ img{
   width: 100%;
 }
 
-/*top header navigation section*/
-.navbar a{
+a{
   font-size: 1.1rem;
   font-weight: bold;
 }
 
+.btn-primary:hover{
+  background-color: #399bd1;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
+  border-color: #204d74;
+}
+
+.image-container img{
+  opacity: 0.7;
+  transition: transform .5s, opacity .5s;
+}
+
+/*top header navigation section*/
 .navbar-default .navbar-nav > .active > a:hover{
   color: #399bd1;
 }
@@ -48,7 +59,7 @@ img{
   font-family: monoton;
   font-size: 7.1rem;
   color: white;
-  text-shadow: #000 -1px -1px;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   max-width: 51.3rem;
   text-align: center;
 }
@@ -83,14 +94,45 @@ img{
   overflow: hidden;
 }
 
-.image-container img{
-  opacity: 0.7;
-}
-
 .product-categories h3{
   color: #399bd1;
 }
 
 .product-categories ul{
   color: rgba(0, 0, 0, 0.7);
+}
+
+/*Projects section*/
+.item{
+  margin-bottom: 5.85rem;
+}
+
+.item .image-container{
+  height: 13.5rem;
+  overflow: hidden;
+}
+
+/*bottom section*/
+.support{
+  padding: 5.2rem 0;
+  background-color: #f3f3f3;
+  text-align: center;
+}
+
+.support strong{
+  font-weight: bold;
+  display: inline-block;
+  margin-bottom: 1.4rem;
+  font-size: 2.5rem;
+}
+
+.support p{
+  margin: auto;
+  max-width: 42rem;
+}
+
+.support a{
+  margin-top: 2.8rem;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+  transition: .5s box-shadow;
 }
