--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,9 +31,13 @@ a{
 
 .image-container img{
   opacity: 0.7;
-  transition: transform .5s, opacity .5s;
+  transition: all 0.5s linear;
 }
 
+.image-container img:hover{
+  opacity: 1;
+  transform: scale(1.3);
+}
 /*top header navigation section*/
 .navbar-default .navbar-nav > .active > a:hover{
   color: #399bd1;
